[gd_scene load_steps=4 format=3 uid="uid://dektg7syw80hb"]

[ext_resource type="Script" uid="uid://ddn5jwki1kurf" path="res://src/object/block.gd" id="1_68phc"]
[ext_resource type="Texture2D" uid="uid://4t1bnbcekbwt" path="res://assets/block/blocks.png" id="2_k4t3q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvvpm"]
size = Vector2(112, 112)

[node name="Block" type="Node2D"]
script = ExtResource("1_68phc")

[node name="Quarters" type="CanvasGroup" parent="."]

[node name="BlockQuarter_0" type="Sprite2D" parent="Quarters"]
position = Vector2(-32, -32)
texture = ExtResource("2_k4t3q")
hframes = 9
vframes = 4

[node name="BlockQuarter_1" type="Sprite2D" parent="Quarters"]
position = Vector2(32, -32)
texture = ExtResource("2_k4t3q")
hframes = 9
vframes = 4

[node name="BlockQuarter_2" type="Sprite2D" parent="Quarters"]
position = Vector2(-32, 32)
texture = ExtResource("2_k4t3q")
hframes = 9
vframes = 4

[node name="BlockQuarter_3" type="Sprite2D" parent="Quarters"]
position = Vector2(32, 32)
texture = ExtResource("2_k4t3q")
hframes = 9
vframes = 4

[node name="Area2D" type="Area2D" parent="."]
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_cvvpm")
one_way_collision_margin = 0.0

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
